[tool.poetry]
name = "dmdm"
version = "1.4.3"
description = "Django MarkDown Mails"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6.1"
mdmail = "^0.1.3"
Django = "^2.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
python-coveralls = "^2.9.3"
safety = "^1.10.3"
yapf = "^0.31.0"
mypy = "^0.812"
django-stubs = "^1.7.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.11.1"
setuptools-scm = "^6.0.1"
Sphinx = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
