[tool.poetry]
name = "dmdm"
version = "2.0.3"
description = "Django MarkDown Mails"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/nim65s/dmdm"
repository = "https://github.com/nim65s/dmdm.git"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/dmdm/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
nmdmail = "^0.3.0"
Django = ">=2.2,<5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.0"
safety = "^2.2.0"
mypy = "^1.2.0"
django-stubs = "^4.2.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.11.1"
Sphinx = "^6.0.0"
coverage = "^7.2.5"
myst-parser = "^1.0.0"
types-toml = "^0.10.1"
pyupgrade = "^2.31.0"
black = "^22.10.0"

[tool.coverage.run]
source = ["dmdm"]
omit = ["*/migrations/*", "*/wsgi.py", "*/apps.py"]

[tool.django-stubs]
django_settings_module = "testproject.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.pydocstyle]
ignore = "D203,D204"  # https://github.com/google/yapf/issues/744
match_dir = "(?=[^\\.])(?!migrations).*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
