[tool.poetry]
name = "dmdm"
version = "2.0.3"
description = "Django MarkDown Mails"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/nim65s/dmdm"
repository = "https://github.com/nim65s/dmdm.git"

[tool.poetry.urls]
changelog = "https://github.com/nim65s/dmdm/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
nmdmail = "^0.3.0"
Django = ">=5.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
safety = "^3.2.8"
mypy = "^1.11.2"
django-stubs = "^5.1.0"
pydocstyle = "^6.3.0"
pre-commit = "^3.8.0"
Sphinx = "^8.0.2"
coverage = "^7.6.1"
myst-parser = "^4.0.0"
types-toml = "^0.10.1"
pyupgrade = "^3.17.0"
black = "^24.8.0"

[tool.coverage.run]
source = ["dmdm"]
omit = ["*/migrations/*", "*/wsgi.py", "*/apps.py"]

[tool.django-stubs]
django_settings_module = "testproject.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.pydocstyle]
ignore = "D203,D204"  # https://github.com/google/yapf/issues/744
match_dir = "(?=[^\\.])(?!migrations).*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
